# DeepResearch

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  stack-research-plan-input.json
docs/images/: README.md
eval/datasets/: hh_analysis_golden.json  identity_golden.json  merge_golden.json  structure_events_golden.json  verdict_golden.json
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
scripts/: e2e_run.py
src/agents/: checkpoint_serde.py  chunking.py  configuration.py  graph_state.py  language.py  llm_service.py  model_credentials.py  models.py  observability.py  pipeline.py  prompts.py  structured_output.py
src/backend/: api.py  main.py  paths.py  run_service.py  runtime_requirements.py  serve.py
src/employer_dd_agent/: __init__.py  api.py  checkpoint_serde.py  configuration.py  extraction.py  graph_state.py  identity.py  language.py  llm_service.py  main.py  merge.py  models.py  observability.py  pipeline.py  prompts.py  run_service.py  runtime_requirements.py  serve.py  sources.py  (+2 more)
tests/: eval_common.py  hh_eval_utils.py  identity_eval_utils.py  merge_eval_utils.py  structure_events_eval_utils.py  test_docstring_coverage.py  test_frontend_paths.py  test_hh_html_and_runtime.py  test_hh_resume_routing.py  test_hh_search_queries.py  test_hh_vacancies_analysis.py  test_hh_vacancies_client.py  test_hh_vacancies_node.py  test_hh_vacancy_result.py  test_hh_web_scraper.py  test_identity_resolution.py  test_identity_resume.py  test_merge_quality.py  test_package_layout.py  test_structure_events_extraction.py  test_structured_output.py  test_supervisor_budgets.py  test_supervisor_permissions.py  test_tool_observation.py  test_verdict_signals.py  verdict_eval_utils.py
(+110 files in other folders)
