[project]
name = "employer-due-diligence-agent"
version = "0.1.0"
description = "Employer due diligence API and ingestion pipeline."
requires-python = ">=3.12"
dependencies = [
  "deepeval>=4.1.2",
  "fastapi",
  "httpx>=0.28.1",
  "json-repair>=0.61.0",
  "langchain>=1.3.11",
  "langchain-google-genai>=4.2.6",
  "langchain-openai>=1.3.3",
  "langchain-openrouter>=0.2.4",
  "langchain-tavily>=0.2.18",
  "langfuse>=4.12.0",
  "langgraph",
  "langgraph-checkpoint-sqlite>=3.1.0",
  "pydantic",
  "python-dotenv>=1.2.2",
  "tiktoken>=0.13.0",
  "uvicorn",
]

[project.scripts]
start = "backend.serve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/backend"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
